--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-
-
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -17,12 +15,14 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tanstack/react-query": "^4.32.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "lodash": "^4.17.21",
     "next": "^13.4.10",
     "next-auth": "^4.22.3",
     "postcss": "8.4.26",
